# python-entsoe

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  release-please-config.json
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml
docs/: data-availability.md  dimensions-reference.md
examples/: ancillary_services.ipynb  balancing.ipynb  generation.ipynb  generation_per_plant.ipynb  generator_level_germany.ipynb  load.ipynb  prices.ipynb  transmission.ipynb
scripts/: generate_notebooks.py
skills/entsoe/: SKILL.md
src/entsoe/: __init__.py  _http.py  _mappings.py  _xml.py  cache.py  catalog.py  client.py  exceptions.py
src/entsoe/.agents/skills/entsoe/: SKILL.md
src/entsoe/cli/: __init__.py  _output.py  _resolve.py  app.py  balancing.py  cache_cmd.py  catalog_cmd.py  config.py  config_cmd.py  exec_cmd.py  generation.py  load.py  prices.py  transmission.py
src/entsoe/namespaces/: _base.py  balancing.py  generation.py  load.py  prices.py  transmission.py
tests/: conftest.py  test_balancing.py  test_generation.py  test_load.py  test_multi.py  test_prices.py  test_transmission.py  test_validation.py
