[project]
name = "library"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jsulopzs", email = "jesus.lopez@datons.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.0",
    "requests>=2.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
