[project]
name = "python-entsoe"
version = "0.1.1"
description = "Python client for the ENTSO-E Transparency Platform API"
readme = "README.md"
license = "MIT"
authors = [
    { name = "jsulopzs", email = "jesus.lopez@datons.com" },
]
requires-python = ">=3.13"
keywords = ["entsoe", "energy", "electricity", "api", "transparency"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pandas>=2.0",
    "requests>=2.28",
]

[project.urls]
Repository = "https://github.com/jsulopzs/python-entsoe"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/entsoe"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "nbformat>=5.10.4",
    "plotly>=6.5.2",
    "pytest>=9.0.2",
]
